# calculadora-notas-cederj

./: .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
disciplina/: disciplina.py  main.py
frontend/: index.html  script.js  styles.css
tests/: test_disciplina.py
